Update - Improving code readability