@@ -1,6 +1,7 @@
 package com.sehkmet.microservices.productservice.listeners;
 
 import com.sehkmet.microservices.productservice.model.BaseModel;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.data.mongodb.core.mapping.event.AbstractMongoEventListener;
 import org.springframework.data.mongodb.core.mapping.event.BeforeConvertEvent;
 import org.springframework.stereotype.Component;
@@ -15,7 +16,7 @@ public class MongoListener extends AbstractMongoEventListener<BaseModel> {
 
         BaseModel baseModel = beforeConvertEvent.getSource();
 
-        if(baseModel.getId().isBlank()){
+        if(StringUtils.isBlank(baseModel.getId())){
             baseModel.setCreatedAt(LocalDateTime.now());
             baseModel.setUpdatedAt(LocalDateTime.now());
         } else baseModel.setUpdatedAt(LocalDateTime.now());
